# cryppiweb3

./: .gitignore  app.py  main.py  main_2.py  main_3.py  main_zksync.py  pyproject.toml
data/: config.py  models.py
data/abis/: mute.json  token.json
eth_async/: client.py  contracts.py  exceptions.py  models.py  transactions.py  types.py  wallet.py
eth_async/utils/: string.py  utils.py
tasks/: base.py  mute.py  shiba.py
